complete style of volResults list cards, fix navbar invisible burger bug

--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -55,8 +55,8 @@ html, body, #root, .g1App {
     --zi-popup-1st: 1100;
     --zi-popup-footer: 1150;
     --zi-popup-2nd: 1200;
-    --zi-navbar: 110;
-    --zi-subnav: 120;
+    --zi-navbar: 5100;
+    --zi-subnav: 5200;
     --zi-carousel-arrows: 100;
 }
 
